syntax = "proto3";

package player.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto"; // For empty requests/responses

// Main service definition
service PlayerService {
  // System operations
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

  // Player controls
  rpc Control(ControlRequest) returns (google.protobuf.Empty);
  rpc GetPlayerState(GetPlayerStateRequest) returns (PlayerState);
  rpc SetPlayerState(SetPlayerStateRequest) returns (google.protobuf.Empty);

  // Queue management
  rpc ManageQueue(QueueRequest) returns (QueueResponse);

  // Provider operations
  rpc ManageProvider(ProviderRequest) returns (ProviderResponse);
  rpc SearchTracks(SearchRequest) returns (SearchResponse);
}

// Health check related messages
message HealthCheckRequest { bool terminate = 1; }

message HealthCheckResponse {
  bool is_alive = 1;
  string version = 2;
  string uptime = 3;
}

// Player control related messages
message ControlRequest {
  enum Command {
    COMMAND_UNSPECIFIED = 0;
    PLAY = 1;
    PAUSE = 2;
    STOP = 3;
    NEXT = 4;
    PREVIOUS = 5;
    SEEK = 6;
    SET_VOLUME = 7;
  }

  Command command = 1;
  oneof params {
    SeekParams seek_params = 2;
    VolumeParams volume_params = 3;
  }
}

message SeekParams { google.protobuf.Duration position = 1; }

message VolumeParams { float volume = 1; }

// Player state related messages
message PlayerState {
  enum PlaybackState {
    PLAYBACK_UNKNOWN = 0;
    PLAYING = 1;
    PAUSED = 2;
    STOPPED = 3;
  }

  enum RepeatMode {
    REPEAT_OFF = 0;
    REPEAT_ALL = 1;
    REPEAT_ONE = 2;
  }

  PlaybackState playback_state = 1;
  float volume = 2;
  google.protobuf.Duration position = 3; // Current playback position
  google.protobuf.Duration duration = 4; // Total track duration
  RepeatMode repeat_mode = 5;
  bool shuffle_enabled = 6;
  Track current_track = 7; // Currently playing track
}

message SetPlayerStateRequest {
  optional PlayerState.RepeatMode repeat_mode = 1;
  optional bool shuffle_enabled = 2;
}

message GetPlayerStateRequest {
  // empty
}

// Queue related messages
message QueueRequest {
  oneof action {
    AddTrackRequest add_track = 1;
    RemoveTrackRequest remove_track = 2;
    ClearQueueRequest clear_queue = 3;
    MoveTrackRequest move_track = 4;
  }
}

message AddTrackRequest {
  Track track = 1;
  optional uint32 index = 2;
}

message RemoveTrackRequest { uint32 index = 1; }

message ClearQueueRequest {
  bool keep_current = 1; // Whether to keep currently playing track
}

message MoveTrackRequest {
  uint32 from_index = 1;
  uint32 to_index = 2;
}

message QueueResponse {
  repeated Track tracks = 1;
  uint32 current_index = 2;
}

// Track related messages
message Track {
  string id = 1;
  string provider_id = 2;
  string title = 3;
  map<string, string> metadata = 4;
}

// Provider related messages
message ProviderRequest {
  oneof action {
    RegisterProviderRequest register = 1;
    UnregisterProviderRequest unregister = 2;
    google.protobuf.Empty get_registered = 3;
  }
}

message RegisterProviderRequest {
  oneof provider {
    SineWaveProvider sinewave = 1;
    LocalFileProvider local_file = 2;
    YtdlProvider ytdl = 3;
  }
}

message SineWaveProvider {
  // empty
}

message LocalFileProvider {
  string music_folder = 1;
  bool recursive_scan = 2;
}

message YtdlProvider {
  optional string binary_path = 1;
  repeated string extra_args = 2;
}

message UnregisterProviderRequest { string provider_id = 1; }

message ProviderResponse {
  repeated string providers = 1;
}

// Search related messages
message SearchRequest {
  string query = 1;
  repeated string provider_ids = 2;
  uint32 max_results = 3;
  map<string, string> filters = 4; // Added search filters
}

message SearchResponse {
  map<string, ProviderSearchResults> results = 1; // provider_id => provider_result
}

message ProviderSearchResults {
  repeated Track tracks = 1;
  bool has_more = 2; // Indication if more results are available
}
